build: add new Maven module The Web core Maven module was added.

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <modules>
         <module>repository</module>
         <module>html-handler</module>
+        <module>platform-web-core</module>
     </modules>
 
     <build>
